<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.SettingsFragment">

    <ImageView
        android:id="@+id/settingsProfileImage"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/standard_image_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/default_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsProfilePictureGalleryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/profile_picture_gallery_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfileImage" />

    <Button
        android:id="@+id/settingsProfilePictureCameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/profile_picture_camera_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfilePictureGalleryButton" />

    <Button
        android:id="@+id/settingsLogoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/logout_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfilePictureCameraButton" />
</androidx.constraintlayout.widget.ConstraintLayout>